--- a/app/src/main/res/layout/activity_detalhes_ordem_servico_aberta.xml
+++ b/app/src/main/res/layout/activity_detalhes_ordem_servico_aberta.xml
@@ -27,7 +27,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:title="Detalhes Da Ordem De Serviço"
                 android:background="@color/yellow"
-                android:titleMarginLeft="100dp"
                 android:titleMarginStart="50dp"
 
                 />
@@ -57,7 +56,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="65dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="80dp"
 
 
 
@@ -249,10 +248,10 @@
         style="@style/Button_yellow"
         android:onClick="associarOrdem"
         android:text="Associar"
-        app:layout_constraintTop_toBottomOf="@id/add_anexos"
+        app:layout_constraintTop_toBottomOf="@id/view_detalhes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         />
 
 
