--- a/app/src/main/res/layout/activity_manter_ordem_de_servico.xml
+++ b/app/src/main/res/layout/activity_manter_ordem_de_servico.xml
@@ -4,47 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetalhesChamadoAberto"
-    android:background="@color/blue">
+    tools:context=".ManterOrdemDeServico" android:background="@color/blue">
 
-<com.google.android.material.appbar.AppBarLayout
-    android:id="@+id/toolbar2"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    >
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/toolbar2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Toolbar
-            android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:title="Detalhes Do Chamado"
-            android:background="@color/yellow"
-            android:titleMarginStart="50dp"
+            android:layout_height="wrap_content">
+            <Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:title="Detalhes Da Ordem De Serviço"
+                android:background="@color/yellow"
+                android:titleMarginStart="50dp"
 
-            />
-        <ImageView
-            android:id="@+id/retornoHome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/retorno"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:onClick="voltarHome"
-            />
+                />
+            <ImageView
+                android:id="@+id/retornoHome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/retorno"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="10dp"
+                android:onClick="voltarHome"
+                />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.material.appbar.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+<ScrollView
+    android:id="@+id/scrollbar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    android:layout_marginTop="65dp"
+    android:layout_marginHorizontal="20dp"
+    android:layout_marginBottom="80dp"
+    android:orientation="vertical"
+    android:fillViewport="true">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <View
         android:id="@+id/view_detalhes"
@@ -52,13 +69,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/container_components"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="65dp"
-
-
-        />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/numero_chamado_detalhes"
@@ -71,7 +82,6 @@
         app:layout_constraintTop_toTopOf="@+id/view_detalhes"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-
         />
 
     <View
@@ -111,7 +121,7 @@
         android:textColor="@color/gray"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         app:layout_constraintTop_toBottomOf="@id/flag_andamento_text"
-        android:layout_marginTop="40sp"
+        android:layout_marginTop="35sp"
         android:layout_marginLeft="40sp"
 
 
@@ -124,7 +134,7 @@
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="140dp"
         android:hint="Politécnico"
         android:inputType="text" />
@@ -241,48 +251,20 @@
 
         />
 
-    <TextView
-        android:id="@+id/botao_excluir_chamado"
-        style="@style/linkAcesso"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="excluirChamado"
-        android:text="excluir chamado"
-        android:textStyle="bold"
-        android:textAlignment="center"
+
+    </LinearLayout>
+
+    </ScrollView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonSalvarCadastro"
+        style="@style/Button_yellow"
+        android:onClick="associarOrdem"
+        android:text="Associar"
+        app:layout_constraintTop_toBottomOf="@id/scrollbar"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="40dp"/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        android:layout_marginTop="15dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
