--- a/app/src/main/res/layout/activity_primeiro_acesso.xml
+++ b/app/src/main/res/layout/activity_primeiro_acesso.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".PrimeiroAcesso">
+    tools:context=".PrimeiroAcesso"
+    android:background="@color/white"
+    >
 
 
 <ImageView
@@ -59,6 +61,8 @@
     <View
         android:id="@+id/conteinerComponents"
         style="@style/ConteinerComponents"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@id/primeiro_ac"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +84,8 @@
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
         android:hint="Seu nome"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColorHint="@color/gray"/>
 
     <EditText
         android:id="@+id/editTextCpf"
@@ -95,7 +100,8 @@
         android:layout_marginEnd="15sp"
         android:hint="Seu CPF"
         android:drawableRight="@drawable/document"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColorHint="@color/gray"/>
 
 
     <EditText
@@ -111,7 +117,8 @@
         android:layout_marginEnd="15sp"
         android:hint="Seu Telefone"
         android:drawableRight="@drawable/smartphone"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColorHint="@color/gray"/>
 
     <EditText
         android:id="@+id/editTextEmailAddress"
@@ -126,7 +133,8 @@
         android:layout_marginEnd="15sp"
         android:hint="Seu Email"
         android:drawableRight="@drawable/email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColorHint="@color/gray"/>
 
 
     <EditText
@@ -143,7 +151,7 @@
         android:inputType="textPassword"
         android:hint="Sua Senha"
         android:drawableRight="@drawable/baseline_remove_eye_24"
-        />
+        android:textColorHint="@color/gray"/>
 
 
     <EditText
@@ -161,6 +169,7 @@
         android:hint="Confirme a Senha"
         android:drawableRight="@drawable/baseline_remove_eye_24"
         android:drawableTint="@color/gray"
+        android:textColorHint="@color/gray"
         />
 
 
