--- a/app/src/main/res/menu/menu_operario.xml
+++ b/app/src/main/res/menu/menu_operario.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/cadastro_operario" android:title="@string/cadastro_operario"
-        android:icon="@drawable/baseline_person_2_24" android:iconTint="@color/blue" app:showAsAction="never"  android:iconGravity="end"  android:iconSize="10dp"/>
+        android:icon="@drawable/baseline_person_2_24" android:iconTint="@color/blue" app:showAsAction="never" />
 
 
     <item android:id="@+id/sobreApp" android:title="@string/sobre"
-        android:icon="@drawable/sobre" android:iconTint="@color/blue" app:showAsAction="never"  android:iconGravity="end" android:iconSize="10dp"/>
+        android:icon="@drawable/sobre" android:iconTint="@color/blue" app:showAsAction="never" />
 
 
     <item android:id="@+id/logout" android:title="@string/logout"
-        android:icon="@drawable/logout"  android:iconTint="@color/blue" app:showAsAction="never"  android:iconGravity="end" android:iconSize="10dp" />
+        android:icon="@drawable/logout"  android:iconTint="@color/blue" app:showAsAction="never"  />
 
 </menu>
