--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -168,17 +168,17 @@
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginStart="44dp"
-        app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        tools:layout_editor_absoluteY="85dp" />
+        app:layout_constraintStart_toEndOf="@id/campus_textview"
+        tools:layout_editor_absoluteY="85dp"
+        app:layout_constraintTop_toTopOf="campus_textview"/>
 
     <Spinner
         android:id="@+id/predioSpinner"
-        android:layout_width="0dp"
-        android:layout_height="31dp"
-        android:layout_marginEnd="48dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/predio_textview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/predio_textview" />
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="44dp"
+        app:layout_constraintTop_toBottomOf="@id/campusSpinner"
+        app:layout_constraintStart_toEndOf="@id/campus_textview" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
