--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -214,7 +214,7 @@
         android:layout_marginStart="44dp"
         app:layout_constraintStart_toEndOf="@id/campus_textview"
         tools:layout_editor_absoluteY="85dp"
-        app:layout_constraintTop_toTopOf="campus_textview"/>
+        app:layout_constraintTop_toTopOf="@id/campus_textview"/>
 
     <Spinner
         android:id="@+id/predioSpinner"
