--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -120,10 +120,9 @@
         android:text="Descreva a localização"
         android:textColor="@color/gray"
         android:textSize="15dp"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-
-
-        tools:layout_editor_absoluteY="182dp" />
+        app:layout_constraintTop_toBottomOf="@+id/predio_textview"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes" />
 
     <EditText
         android:id="@+id/descricao_localizacao_editText"
