--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
                 android:id="@+id/editTextCPFLogin"
                 style="@style/editText"
                 android:inputType="number"
+                android:textColor="@color/gray"
                 android:hint="CPF"
                 android:textColorHint="@color/blue"
                 android:textSize="20dp"
@@ -59,6 +60,7 @@
                 android:hint="Senha"
                 android:textColorHint="@color/blue"
                 style="@style/editText"
+                android:textColor="@color/gray"
                 android:textSize="20dp"
                 android:drawableRight="@drawable/baseline_remove_eye_24"
                 app:layout_constraintStart_toStartOf="@id/containerComponents"
