--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -212,16 +213,19 @@
         android:layout_height="35dp"
         android:layout_marginStart="44dp"
         app:layout_constraintStart_toEndOf="@id/campus_textview"
-        tools:layout_editor_absoluteY="85dp"
-        app:layout_constraintTop_toTopOf="@id/campus_textview"/>
+        app:layout_constraintTop_toTopOf="@id/campus_textview"
+        android:background="@color/lightgray"
+        />
 
     <Spinner
         android:id="@+id/predioSpinner"
+        android:layout_marginTop="5dp"
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginStart="44dp"
         app:layout_constraintTop_toBottomOf="@id/campusSpinner"
-        app:layout_constraintStart_toEndOf="@id/campus_textview" />
+        app:layout_constraintStart_toEndOf="@id/campus_textview"
+        android:background="@color/lightgray"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
