--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
+    <style name="SpinnerTextStyle" parent="android:Widget.TextView.SpinnerItem">
+        <item name="android:textColor">@color/gray</item>
+    </style>
     
     <style name="ConteinerComponents">
 
