--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -135,6 +135,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
 
+        android:textColor="@color/black"
         android:inputType="text" />
 
     <TextView
@@ -162,7 +163,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
         android:hint=""
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="@color/black"/>
 
 
     <TextView
