--- a/app/src/main/res/layout/activity_primeiro_acesso.xml
+++ b/app/src/main/res/layout/activity_primeiro_acesso.xml
@@ -47,8 +47,7 @@
         android:id="@+id/primeiro_ac"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20sp"
-
+        android:layout_marginTop="20dp"
         android:text="Primeiro Acesso"
         android:textAlignment="center"
         android:textColor="@color/yellow"
@@ -58,33 +57,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <View
-        android:id="@+id/conteinerComponents"
-        style="@style/ConteinerComponents"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/primeiro_ac"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
 
-
-
-        />
 
 
     <EditText
         android:id="@+id/editTextName"
         style="@style/editText"
-        app:layout_constraintTop_toTopOf="@id/conteinerComponents"
+        app:layout_constraintTop_toBottomOf="@id/primeiro_ac"
         android:drawableRight="@drawable/baseline_person_2_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
         android:hint="Seu nome"
         android:inputType="text"
+        android:layout_marginTop="20dp"
         android:textColorHint="@color/gray"/>
 
     <EditText
@@ -94,7 +83,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
@@ -111,7 +100,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
@@ -127,7 +116,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
@@ -141,7 +130,7 @@
         android:id="@+id/editTextPassword"
         style="@style/editText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
@@ -158,7 +147,7 @@
         android:id="@+id/editTextPassword2"
         style="@style/editText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
@@ -181,6 +170,7 @@
             app:layout_constraintTop_toBottomOf="@id/editTextPassword2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="30dp"
             />
 
 
