--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="SpinnerTextStyle" parent="android:Widget.TextView.SpinnerItem">
-        <item name="android:textColor">@color/gray</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     
     <style name="ConteinerComponents">
