--- a/app/src/main/res/layout/activity_primeiro_acesso.xml
+++ b/app/src/main/res/layout/activity_primeiro_acesso.xml
@@ -3,23 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".PrimeiroAcesso"
     android:background="@color/white"
     >
 
 
-<ImageView
-    android:id="@+id/imagemufpr"
-    android:layout_width="match_parent"
-    android:layout_height="190dp"
-    android:src="@drawable/ufpr_primeiroacesso"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
+    <ImageView
+        android:id="@+id/imagemufpr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ufpr_primeiroacesso"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <View
+        android:id="@+id/conteinerComponentsCadastro"
+        style="@style/ConteinerComponents"
+        android:layout_height="450dp"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/imagemufpr"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 
-    />
 
     <ImageView
         android:id="@+id/closebutton"
@@ -40,6 +52,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="10dp"
         android:onClick="menuDeslogado"
+        android:cropToPadding="true"
+        android:scaleType="centerCrop"
         />
 
 
@@ -47,26 +61,24 @@
         android:id="@+id/primeiro_ac"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="200dp"
         android:text="Primeiro Acesso"
         android:textAlignment="center"
         android:textColor="@color/yellow"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/imagemufpr"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
-
+        app:layout_constraintEnd_toEndOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintStart_toStartOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintTop_toTopOf="@id/conteinerComponentsCadastro" />
 
     <EditText
         android:id="@+id/editTextName"
         style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@id/primeiro_ac"
+        android:textColor="@color/black"
         android:drawableRight="@drawable/baseline_person_2_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintStart_toStartOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintTop_toTopOf="@id/conteinerComponentsCadastro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15sp"
@@ -79,9 +91,10 @@
     <EditText
         android:id="@+id/editTextCpf"
         style="@style/editText"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/editTextName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintStart_toStartOf="@id/conteinerComponentsCadastro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
@@ -96,9 +109,10 @@
     <EditText
         android:id="@+id/editTextTelefone"
         style="@style/editText"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/editTextCpf"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintStart_toStartOf="@id/conteinerComponentsCadastro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
@@ -112,9 +126,10 @@
     <EditText
         android:id="@+id/editTextEmailAddress"
         style="@style/editText"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/editTextTelefone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintStart_toStartOf="@id/conteinerComponentsCadastro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
@@ -129,14 +144,15 @@
     <EditText
         android:id="@+id/editTextPassword"
         style="@style/editText"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
         app:layout_constraintTop_toBottomOf="@id/editTextEmailAddress"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintStart_toStartOf="@id/conteinerComponentsCadastro"
         android:inputType="textPassword"
         android:hint="Sua Senha"
         android:drawableRight="@drawable/baseline_remove_eye_24"
@@ -146,6 +162,7 @@
     <EditText
         android:id="@+id/editTextPassword2"
         style="@style/editText"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
@@ -153,8 +170,8 @@
         android:layout_marginEnd="15sp"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/editTextPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/conteinerComponentsCadastro"
+        app:layout_constraintStart_toStartOf="@id/conteinerComponentsCadastro"
         android:hint="Confirme a Senha"
         android:drawableRight="@drawable/baseline_remove_eye_24"
         android:drawableTint="@color/gray"
@@ -170,8 +187,9 @@
             app:layout_constraintTop_toBottomOf="@id/editTextPassword2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="30dp"
+
             />
+
 
 
 
