--- a/app/src/main/res/layout/activity_homepage_usuario.xml
+++ b/app/src/main/res/layout/activity_homepage_usuario.xml
@@ -110,6 +110,18 @@
 
         />
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="430dp"
+        android:background="@drawable/container_components"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/meuschamados"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="20dp"
+
+        />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="430dp"
