--- a/app/src/main/res/layout/activity_homepage_usuario.xml
+++ b/app/src/main/res/layout/activity_homepage_usuario.xml
@@ -112,15 +112,15 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewChamadosUsuario"
         android:layout_width="match_parent"
         android:layout_height="430dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/container_components"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meuschamados"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="20dp"
 
-        />
+        app:layout_constraintTop_toBottomOf="@+id/meuschamados" />
 
     <View
         android:layout_width="match_parent"
