--- a/app/src/main/res/layout/activity_cadastro_operario.xml
+++ b/app/src/main/res/layout/activity_cadastro_operario.xml
@@ -41,6 +41,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="10dp"
+        android:onClick="closeActivity"
         />
 
     <ImageView
@@ -182,8 +183,8 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSalvarCadastro"
         style="@style/Button_yellow"
-        android:onClick="salvarCadastro"
-        android:text="Salvar"
+        android:onClick="atualizarCadastroOperario"
+        android:text="Atualizar"
         app:layout_constraintTop_toBottomOf="@id/editTextPassword2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
