--- a/app/src/main/res/layout/activity_detalhes_chamado_aberto.xml
+++ b/app/src/main/res/layout/activity_detalhes_chamado_aberto.xml
@@ -124,6 +124,7 @@
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="140dp"
         android:hint="Politécnico"
@@ -152,6 +153,7 @@
         app:layout_constraintTop_toBottomOf="@id/editTexCampus"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="140dp"
@@ -179,6 +181,7 @@
         app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
+        android:textColor="@color/black"
         android:layout_height="90sp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
@@ -203,6 +206,7 @@
     <EditText
         android:id="@+id/descricao_problema_editText"
         style="@style/editText"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
@@ -248,6 +252,7 @@
         android:layout_height="wrap_content"
         android:onClick="excluirChamado"
         android:text="excluir chamado"
+        android:textColor="@color/blue"
         android:textStyle="bold"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
