--- a/app/src/main/res/layout/activity_detalhes_chamado_em_andamento.xml
+++ b/app/src/main/res/layout/activity_detalhes_chamado_em_andamento.xml
@@ -128,6 +128,7 @@
     <EditText
         android:id="@+id/editTexCampus"
         style="@style/editText"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/flag_andamento"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
@@ -157,6 +158,8 @@
     <EditText
         android:id="@+id/editTextPredio"
         style="@style/editText"
+        android:textColor="@color/black"
+
         app:layout_constraintTop_toBottomOf="@id/editTexCampus"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
@@ -184,6 +187,7 @@
     <EditText
         android:id="@+id/descricao_localizacao_editText"
         style="@style/editText"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
@@ -211,6 +215,7 @@
     <EditText
         android:id="@+id/descricao_problema_editText"
         style="@style/editText"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
