--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".Cadastro"
     android:background="@color/white"
     >
@@ -61,16 +61,16 @@
     <TextView
         android:id="@+id/primeiro_ac"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
+        android:layout_height="wrap_content"
         android:text="Cadastro"
+        android:layout_marginTop="20dp"
         android:textAlignment="center"
         android:textColor="@color/yellow"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/conteinerComponentsCadastro"
         app:layout_constraintStart_toStartOf="@id/conteinerComponentsCadastro"
-        app:layout_constraintTop_toTopOf="@id/conteinerComponentsCadastro" />
+        app:layout_constraintTop_toBottomOf="@id/imagemufpr" />
 
     <EditText
         android:id="@+id/editTextName"
@@ -101,7 +101,9 @@
         android:layout_marginTop="10sp"
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
+        android:enabled="false"
         android:hint="Seu CPF"
+        android:background="@color/lightgray"
         android:drawableRight="@drawable/document"
         android:inputType="text"
         android:textColorHint="@color/gray"/>
@@ -183,8 +185,8 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSalvarCadastro"
         style="@style/Button_yellow"
-        android:onClick="salvarCadastro"
-        android:text="Salvar"
+        android:onClick="atualizarCadastro"
+        android:text="Atualizar"
         app:layout_constraintTop_toBottomOf="@id/editTextPassword2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
