--- a/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
+++ b/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
@@ -77,6 +77,7 @@
         android:layout_marginTop="10dp"
         />
 
+
     <View
         android:id="@+id/flag_aberto1"
         android:layout_width="match_parent"
@@ -91,68 +92,79 @@
     </View>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="25sp">
+
+            <TextView
+                android:id="@+id/campus_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40sp"
+                android:text="CAMPUS"
+                android:textColor="@color/gray"
+                android:textSize="15dp"
+                app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+                app:layout_constraintTop_toBottomOf="@id/flag_andamento_text"
+
+
+                />
+
+            <Spinner
+                android:id="@+id/campusSpinner"
+                android:textAppearance="@style/SpinnerTextStyle"
+                android:layout_width="200dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="30dp"
+                app:layout_constraintStart_toEndOf="@id/campus_textview"
+                app:layout_constraintTop_toTopOf="@id/campus_textview"
+                style="@style/spinner"
 
 
 
+                />
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/LinearLayoutPredio"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="25sp">
 
-
-    <TextView
-        android:id="@+id/campus_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CAMPUS"
-        android:textSize="15dp"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintTop_toBottomOf="@id/flag_andamento_text"
-        android:layout_marginTop="35sp"
-        android:layout_marginLeft="40sp"
+        <TextView
+            android:id="@+id/predio_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PRÉDIO"
+            android:textSize="15dp"
+            android:textColor="@color/gray"
+            app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+            app:layout_constraintTop_toBottomOf="@id/campus_textview"
+            android:layout_marginLeft="40sp"
 
 
         />
-
-    <EditText
-        android:id="@+id/editTexCampus"
-        style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@id/flag_aberto"
-        app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="140dp"
-        android:hint="Politécnico"
-        android:inputType="text" />
+        <Spinner
+            android:id="@+id/PredioSpinner"
+            android:textAppearance="@style/SpinnerTextStyle"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="30dp"
+            app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPredio"
+            app:layout_constraintTop_toTopOf="@id/campus_textview"
+            style="@style/spinner"
 
 
 
-    <TextView
-        android:id="@+id/predio_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PRÉDIO"
-        android:textSize="15dp"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintTop_toBottomOf="@id/campus_textview"
-        android:layout_marginTop="30sp"
-        android:layout_marginLeft="40sp"
+            />
 
 
-        />
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/editTextPredio"
-        style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@id/editTexCampus"
-        app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="140dp"
-        android:hint="SEPT"
-        android:inputType="text" />
 
     <TextView
         android:id="@+id/descricao_localizacao_textview"
