--- a/app/src/main/res/layout/activity_operario_detalhes_ordem_servico_aberta.xml
+++ b/app/src/main/res/layout/activity_operario_detalhes_ordem_servico_aberta.xml
@@ -122,14 +122,16 @@
     <EditText
         android:id="@+id/editTexCampus"
         style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@id/flag_aberto"
-        app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="140dp"
+        android:layout_marginTop="20dp"
         android:hint="Politécnico"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="#050505"
+        android:textColorHint="#000000"
+        app:layout_constraintStart_toEndOf="@+id/campus_textview"
+        app:layout_constraintTop_toBottomOf="@id/flag_aberto" />
 
 
 
@@ -151,14 +153,16 @@
     <EditText
         android:id="@+id/editTextPredio"
         style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@id/editTexCampus"
-        app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="140dp"
+        android:layout_marginTop="5dp"
         android:hint="SEPT"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintStart_toEndOf="@+id/campus_textview"
+        app:layout_constraintTop_toBottomOf="@id/editTexCampus" />
 
     <TextView
         android:id="@+id/descricao_localizacao_textview"
@@ -178,14 +182,16 @@
     <EditText
         android:id="@+id/descricao_localizacao_editText"
         style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
         android:layout_height="90sp"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
+        android:layout_marginTop="5dp"
         android:hint=""
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview" />
 
     <TextView
         android:id="@+id/descricao_problema_textview"
@@ -205,14 +211,16 @@
     <EditText
         android:id="@+id/descricao_problema_editText"
         style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
         android:layout_height="150sp"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
+        android:layout_marginTop="5dp"
         android:hint=""
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview" />
 
 
     <TextView
