--- a/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
+++ b/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
@@ -18,7 +18,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginTop="65dp"
     android:layout_marginHorizontal="20dp"
-    android:layout_marginBottom="80dp"
+    android:layout_marginBottom="280dp"
     android:orientation="vertical"
     android:fillViewport="true"
     android:background="@drawable/container_components">
@@ -71,8 +71,8 @@
         android:text="#2023226598"
         android:textSize="10dp"
         android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintTop_toTopOf="@+id/view_detalhes"
+        app:layout_constraintStart_toStartOf="@id/scrollbar"
+        app:layout_constraintTop_toTopOf="@id/scrollbar"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         />
@@ -83,9 +83,9 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@drawable/flag_aberto"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintEnd_toEndOf="@+id/view_detalhes"
-        app:layout_constraintTop_toTopOf="@+id/view_detalhes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/numero_chamado_detalhes"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="60dp">
 
@@ -96,7 +96,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_marginTop="25sp">
+        android:layout_marginTop="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        >
 
             <TextView
                 android:id="@+id/campus_textview"
@@ -106,25 +108,23 @@
                 android:text="CAMPUS"
                 android:textColor="@color/gray"
                 android:textSize="15dp"
-                app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-                app:layout_constraintTop_toBottomOf="@id/flag_andamento_text"
+                app:layout_constraintStart_toStartOf="@id/flag_aberto1"
+                app:layout_constraintTop_toBottomOf="@id/flag_aberto1"
 
 
                 />
 
-            <Spinner
-                android:id="@+id/campusSpinner"
-                android:textAppearance="@style/SpinnerTextStyle"
-                android:layout_width="200dp"
-                android:layout_height="35dp"
-                android:layout_marginStart="30dp"
-                app:layout_constraintStart_toEndOf="@id/campus_textview"
-                app:layout_constraintTop_toTopOf="@id/campus_textview"
-                style="@style/spinner"
+        <Spinner
+            android:id="@+id/campusSpinner"
+            style="@style/spinner"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="10dp"
+            android:textAppearance="@style/SpinnerTextStyle"
 
 
-
-                />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/campus_textview" />
 
     </LinearLayout>
 
@@ -142,7 +142,7 @@
             android:text="PRÉDIO"
             android:textSize="15dp"
             android:textColor="@color/gray"
-            app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+            app:layout_constraintStart_toStartOf="@+id/campus_textview"
             app:layout_constraintTop_toBottomOf="@id/campus_textview"
             android:layout_marginLeft="40sp"
 
@@ -153,9 +153,8 @@
             android:textAppearance="@style/SpinnerTextStyle"
             android:layout_width="200dp"
             android:layout_height="35dp"
-            android:layout_marginStart="30dp"
-            app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPredio"
-            app:layout_constraintTop_toTopOf="@id/campus_textview"
+            app:layout_constraintStart_toStartOf="@id/campusSpinner"
+            app:layout_constraintBottom_toBottomOf="@id/campusSpinner"
             style="@style/spinner"
 
 
@@ -173,7 +172,7 @@
         android:text="Descreva a localização"
         android:textSize="15dp"
         android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editTextPredio"
         android:layout_marginTop="10sp"
         android:layout_marginLeft="40sp"
@@ -184,14 +183,16 @@
     <EditText
         android:id="@+id/descricao_localizacao_editText"
         style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
         android:layout_height="90sp"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
+        android:layout_marginTop="5dp"
         android:hint=""
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/descricao_localizacao_textview" />
 
     <TextView
         android:id="@+id/descricao_problema_textview"
@@ -200,7 +201,7 @@
         android:text="Descreva o problema"
         android:textSize="15dp"
         android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_editText"
         android:layout_marginTop="10sp"
         android:layout_marginLeft="40sp"
@@ -211,14 +212,16 @@
     <EditText
         android:id="@+id/descricao_problema_editText"
         style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
         android:layout_height="150sp"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
+        android:layout_marginTop="5dp"
         android:hint=""
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview" />
 
 
     <TextView
@@ -228,7 +231,7 @@
         android:text="Anexos"
         android:textSize="15dp"
         android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descricao_problema_editText"
         android:layout_marginTop="10sp"
         android:layout_marginLeft="40sp"
@@ -249,20 +252,117 @@
 
         />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
-    </LinearLayout>
+
+</LinearLayout>
 
     </ScrollView>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonSalvarCadastro"
-        style="@style/Button_yellow"
-        android:onClick="associarOrdem"
-        android:text="Associar"
+
+    <ScrollView
+        android:id="@+id/scrollbarHistoricoStatus"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
         app:layout_constraintTop_toBottomOf="@id/scrollbar"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="20dp"
+        android:orientation="vertical"
+        android:fillViewport="true"
+        android:background="@drawable/container_components">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+        <TextView
+            android:id="@+id/textViewHistoricoStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:text="Histórico Status"
+            android:textSize="18dp"
+            android:textColor="@color/blue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+
+    <LinearLayout
+        android:id="@+id/LinearLayoutStatus"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:id="@+id/data_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Data"
+            android:textSize="15dp"
+            android:textColor="@color/gray"
+            app:layout_constraintStart_toStartOf="@+id/campus_textview"
+            app:layout_constraintTop_toBottomOf="@id/campus_textview"
+            android:layout_marginLeft="40sp"
+
+
+            />
+
+        <TextView
+            android:id="@+id/descricao_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Descrição"
+            android:textSize="15dp"
+            android:textColor="@color/gray"
+            app:layout_constraintStart_toStartOf="@+id/campus_textview"
+            app:layout_constraintTop_toBottomOf="@id/campus_textview"
+            android:layout_marginLeft="40sp"
+
+
+            />
+    </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            />
+
+
+
+
+
+
+
+
+
+
+
+
+</LinearLayout>
+
+
+
+
+    </ScrollView>
+
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonAtualizarStatus"
+        style="@style/Button_yellow"
+        android:onClick="atualizarStatus"
+        android:text="Atualizar Status"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
