--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,6 +35,8 @@
         <item name="android:maxLength">35</item>
         <item name="android:dropDownHintAppearance">@color/blue</item>
         <item name="android:drawableRight">@drawable/drop_down_spinner</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
 
     </style>
 
