tela atualizar status

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,30 @@
 
     </style>
 
+
+    <style name="Button_gray">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_marginRight">40dp</item>
+        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:background">@drawable/button_gray</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/blue</item>
+
+
+
+
+
+    </style>
+
+
+
+
+
+
+
     <style name="Button_yellow">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
