--- a/app/src/main/res/layout/activity_usuario_detalhes_chamado_aberto.xml
+++ b/app/src/main/res/layout/activity_usuario_detalhes_chamado_aberto.xml
@@ -250,14 +250,14 @@
         style="@style/linkAcesso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
         android:onClick="excluirChamado"
         android:text="excluir chamado"
+        android:textAlignment="center"
         android:textColor="@color/blue"
         android:textStyle="bold"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="40dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 
