--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -167,33 +167,7 @@
         android:textColor="@color/black"/>
 
 
-    <TextView
-        android:id="@+id/anexos_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anexos"
-        android:textSize="15dp"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_editText"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="40sp"
 
-
-        />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/add_anexos"
-        style="@style/Button_anexos"
-        android:onClick="adicionaAnexo"
-        android:text="+"
-        android:textAllCaps="true"
-        app:layout_constraintTop_toBottomOf="@id/anexos_textview"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="60sp"
-
-
-        />
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -202,9 +176,10 @@
         android:layout_marginTop="20dp"
         android:onClick="cadastrarChamado"
         android:text="Salvar"
+        android:layout_marginBottom="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_anexos" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <Spinner
         android:id="@+id/campusSpinner"
@@ -214,7 +189,8 @@
         android:layout_marginStart="30dp"
         app:layout_constraintStart_toEndOf="@id/campus_textview"
         app:layout_constraintTop_toTopOf="@id/campus_textview"
-        android:background="@color/lightgray"
+        android:background="@color/gray"
+        style="@style/Spinner"
         />
 
     <Spinner
@@ -226,7 +202,8 @@
         android:layout_marginStart="30dp"
         app:layout_constraintTop_toBottomOf="@id/campusSpinner"
         app:layout_constraintStart_toEndOf="@id/campus_textview"
-        android:background="@color/lightgray"/>
+        android:background="@color/gray"
+        style="@style/Spinner"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
