--- a/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
+++ b/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
@@ -222,6 +222,7 @@
         android:layout_height="150sp"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="20dp"
         android:hint=""
         android:inputType="text"
         android:textColor="#000000"
@@ -230,39 +231,9 @@
         app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview" />
 
 
-    <TextView
-        android:id="@+id/anexos_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anexos"
-        android:textSize="15dp"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_editText"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="40sp"
 
 
-        />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/add_anexos"
-        style="@style/Button_anexos"
-        android:onClick="adicionaAnexo"
-        android:text="+"
-        android:textAllCaps="true"
-        app:layout_constraintTop_toBottomOf="@id/anexos_textview"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="60sp"
-
-
-        />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
 
 
 </LinearLayout>
