--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,16 +28,13 @@
 
     </style>
 
-    <style name="spinner">
+    <style name="Spinner" parent="android:Widget.Spinner">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/edit_text</item>
         <item name="android:maxLength">35</item>
-        <item name="android:dropDownHintAppearance">@color/blue</item>
         <item name="android:drawableRight">@drawable/drop_down_spinner</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textColorHint">@color/black</item>
-
     </style>
 
     <style name="Button_blue">
