--- a/app/src/main/res/layout/activity_operario_atualizar_status.xml
+++ b/app/src/main/res/layout/activity_operario_atualizar_status.xml
@@ -99,20 +99,15 @@
                     app:layout_constraintTop_toBottomOf="@id/descricao_localizacao_textview" />
 
 
-
-
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonRedirecionar"
         style="@style/Button_gray"
+        android:layout_marginTop="15dp"
         android:onClick="redirecionar"
         android:text="Redirecionar"
-        app:layout_constraintTop_toBottomOf="@id/viewStatus"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/viewStatus" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonResolver"
